# return-result

./: .gitignore  README.md  pyproject.toml
return_result/: __init__.py  result.py
tests/: test_return_result.py
